Fix elements being pushed out of the screen in the side bar

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -3,14 +3,15 @@
     position: sticky; /* Change this from default to fixed */
     top: 0;         /* Anchor to top */
     left: 0;        /* Anchor to left */
-    height: 100vh;  /* Full viewport height */
+    height: 100vh;
+    display: flex; /* Add this */
+
 }
 
 .sidebar {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    padding-top: 0.5rem;
-    height: 100vh;      /* Change to viewport height */
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 2.5rem;
     width: 19rem;
     background-color: var(--base-200);
     color: var(--base-content);
